--- a/UAZ.html
+++ b/UAZ.html
@@ -49,7 +49,7 @@
 </p>
 </div>
 <!-- End image section -->
-
+<!-- Github -->
 <!-- Start Yenilikler Section -->
 <section id="Yenilikler"  style="margin-top: 30px;">
     <h2 style="text-align: center;" >Yenilikler</h2>
