--- a/Əlaqə.html
+++ b/Əlaqə.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Əlaqə</title>
     <a href="">
+
         <link rel="icon" href="./logo.png">
     </a>
 </head>
-<body>
-    <!-- Start header -->
-    <header>
+    
+    <body>
+        <!-- Start header -->
+<header>
         <div style="background-color: aqua;" >
             <center>Dəstək: (+994 12) 424 46 24, Babək prospekti 42</center>
         </div>
@@ -20,7 +22,7 @@
             <a href="./UAZ.html"><img src="./logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
         <ul style="color: rgb(5, 87, 5);" > 
             <li><p>
-             <a href="./Modellər.html" target="blank" >Modellər</a>
+             <a href="./Modellər.html" targetá="blank" >Modellər</a>
             </p>
         </li>
             <li>
