--- a/UAZ.az/UAZ.html
+++ b/UAZ.az/UAZ.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAZ Azərbaycan</title>
-    <link rel="icon" href="./logo.png">
+    <link rel="icon" href="../image/logo.png">
 </head>
 <body>
     <!-- Start header -->
@@ -15,7 +15,8 @@
     </header>
     <div>
         <div>
-            <a href="./UAZ.html"><img src="./logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
+        <a href="./UAZ.html" > <img src="../image/logo.png" alt="uaz logo" width="120px" > </a>
+        </div>        
         <ul style="color: rgb(5, 87, 5);" > 
             <li><p>
              <a href="./Modellər.html" target="blank" >Modellər</a>
@@ -40,39 +41,39 @@
     <!-- Start image section -->
 <div>
 <a href="./Kommersiya.html" target="blank" >
-    <img title="Daha Ətraflı" src="./uaz.jpg" alt="uaz.jpg">
+    <img title="Daha Ətraflı" src="../image/uaz.jpg" alt="uaz.jpg">
 </a>
 <p>
     <a href="./Pikap.html" target="blank" >
-        <img  title="Daha Etrafli" src="./pikap.2.jpg" alt="">
+        <img  title="Daha Etrafli" src="../image/pikap.2.jpg" alt="uaz pikap">
     </a>
 </p>
 </div>
 <!-- End image section -->
-<!-- Github -->
+
 <!-- Start Yenilikler Section -->
 <section id="Yenilikler"  style="margin-top: 30px;">
     <h2 style="text-align: center;" >Yenilikler</h2>
 
     <div style="display: flex; justify-content: space-around;" >
     <div>
-<img src="./xeberler icon 5.jpg" alt="" width="70pxtt" >
+<img src="../image/xeberler icon 2.jpg" alt="xeberler" width="70px" >
 <h4>"UAZ" zavodu Azərbaycana avtomobil ixracını artırmağı planlaşdırır</h4>
     </div>
     <div>
-<img src="./xeberler icon.jpg" alt="" width="70px">
+<img src="../image/xeberler icon 3.jpg" alt="masin xeberler" width="70px">
 <h4>UAZ yeni avadanlıqla yığılma keyfiyyətini artırdı</h4>
     </div>
     <div>
-<img src="./xeberler icon 2.jpg" alt="" width="70px" >
+<img src="../image/xeberler icon 4.jpg" alt="pikap" width="70px" >
 <h4>UAZ Profi «Sükan arxasında»-2018 qalibi oldu</h4>
     </div>
     <div>
-<img src="./xeberler icon 3.jpg" alt="" width="70px" >
+<img src="../image/xeberler icon 5.jpg" alt="" width="70px" >
 <h4>UAZ şirkəti Kosta-Rikaya ixracı başlatdı</h4>
     </div>
     <div>
-<img src="./xeberler icon 4.jpg" alt="" width="70px" >
+<img src="../image/xeberler icon.jpg" alt="" width="70px" >
 <h4>Tanış olun - yeni UAZ</h4>
     </div>
 </div>
