--- a/UAZ.az/Kommersiya.html
+++ b/UAZ.az/Kommersiya.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patriot - UAZ Azərbaycan</title>
+    <title>UAZ Fermer</title>
     <link rel="icon" href="./logo.png">
 </head>
 <body>
@@ -15,7 +15,7 @@
     </header>
     <div>
         <div>
-            <a href="./UAZ.html"><img src="./logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
+            <a href="./UAZ.html"><img src="../image/logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
         <ul style="color: rgb(5, 87, 5);" > 
             <li><p>
              <a href="./Modellər.html" target="blank" >Modellər</a>
@@ -24,11 +24,6 @@
             <li>
                 <p>
                  <a href="./Müştərilərə.html" target="blank" >Müştərilərə</a>
-                    <select>
-                        <option>
-                            Şirkət Haqqında
-                        </option>
-                    </select>
                 </p>
             </li>
             <li>
@@ -38,5 +33,5 @@
         <div>
     <!-- End header -->
     <div>
-        <img src="./patriot_1.png" alt="Patriot new">
+        <img src="../image/kommersiya3.jpg" alt="">
     </div>
