--- a/UAZ.az/Pikap.html
+++ b/UAZ.az/Pikap.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pikap - UAZ Azərbaycan</title>
-    <link rel="icon" href="./logo.png">
+    <link rel="icon" href="../image/logo.png">
 </head>
 <body>
     <!-- Start header -->
@@ -15,7 +15,7 @@
     </header>
     <div>
         <div>
-            <a href="./UAZ.html"><img src="./logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
+            <a href="./UAZ.html"><img src="../image/logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
         <ul style="color: rgb(5, 87, 5);" > 
             <li><p>
              <a href="./Modellər.html" target="blank" >Modellər</a>
@@ -34,6 +34,6 @@
     <!-- End header -->
     <div>
         <a href="./Pikap.html" title="Daha Etrafli" >
-        <img src="./pikap.2.jpg" alt="Pikap">
+        <img src="../image/pikap.2.jpg" alt="Pikap">
         </a>
     </div>
