--- a/UAZ.az/patriot.html
+++ b/UAZ.az/patriot.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xanter - UAZ Azərbaycan</title>
-    <link rel="icon" href="./logo.png">
+    <title>Patriot - UAZ Azərbaycan</title>
+    <link rel="icon" href="../image/logo.png">
 </head>
 <body>
     <!-- Start header -->
@@ -15,23 +15,28 @@
     </header>
     <div>
         <div>
-            <a href="./UAZ.html"><img src="./logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
+            <a href="./UAZ.html"><img src="../image/logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
         <ul style="color: rgb(5, 87, 5);" > 
             <li><p>
-             <a href="./Modellər.html" target="blank" >Modellər</a>
+             <a href="./Modellər.html" target="blank">Modellər</a>
             </p>
         </li>
             <li>
                 <p>
-                 <a href="./Müştərilərə.html" target="blank" >Müştərilərə</a>
+                 <a href="./Müştərilərə.html" target="blank">Müştərilərə</a>
+                    <select>
+                        <option>
+                            Şirkət Haqqında
+                        </option>
+                    </select>
                 </p>
             </li>
             <li>
-                <a href="./Əlaqə.html" target="blank" >Əlaqə</a>
+                <a href="./Əlaqə.html" target="blank">Əlaqə</a>
             </li>
         </ul>
         <div>
     <!-- End header -->
     <div>
-        <img src="./hunter_1.png" alt="">
+        <img src="../image/patriot_1.png" alt="Patriot new">
     </div>
