--- a/UAZ.az/Əlaqə.html
+++ b/UAZ.az/Əlaqə.html
@@ -3,22 +3,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UAZ Fermer</title>
-    <link rel="icon" href="./logo.png">
+    <title>Əlaqə</title>
+    <link rel="icon" href="../image/logo.png">
 </head>
-<body>
-    <!-- Start header -->
-    <header>
+    <body>
+        <!-- Start header -->
+<header>
         <div style="background-color: aqua;" >
             <center>Dəstək: (+994 12) 424 46 24, Babək prospekti 42</center>
         </div>
     </header>
     <div>
         <div>
-            <a href="./UAZ.html"><img src="./logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
+            <a href="./UAZ.html"><img src="../image/logo.png" width="120px" alt="" title="Əsas səhifə"></a></div>        
         <ul style="color: rgb(5, 87, 5);" > 
             <li><p>
-             <a href="./Modellər.html" target="blank" >Modellər</a>
+             <a href="./Modellər.html" targetá="blank" >Modellər</a>
             </p>
         </li>
             <li>
@@ -32,6 +32,3 @@
         </ul>
         <div>
     <!-- End header -->
-    <div>
-        <img src="./kommersiya3.jpg" alt="">
-    </div>
